@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 01:24:09 brook Exp $
+
+SHA1 (R/tcltk2_1.2-11.tar.gz) = b749ff1724aaa10a18037ecaa21e8b685440fd58
+RMD160 (R/tcltk2_1.2-11.tar.gz) = d58176bf9d53b592702e901b7b05a0e3a8350cab
+SHA512 (R/tcltk2_1.2-11.tar.gz) = 89b84b834f6b1d822bccc89121ff6cc88a6a6bf6962f9b3925ef1f68da17377105f7915a7a7013db06d5464cfa00223ccb093d4394b88e443d6a26905ac76801
+Size (R/tcltk2_1.2-11.tar.gz) = 833846 bytes
